# ldap2pg

./: .all-contributorsrc  .coveragerc  .dockerignore  .editorconfig  .gitignore  .golangci.yaml  .goreleaser.yaml  .readthedocs.yaml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HACKING.md  LICENSE  Makefile  README.md  README.rst  Vortexci.io  default.pgo  dev-config.ldif  dev-fixture.ldif  dev-fixture.sh  dev-fixture.sql  docker-compose.ha.yml  docker-compose.ui.yml  docker-compose.yml  fixture.sh  go.mod  go.sum  ldap-ep.sh  ldap2pg-sample.yml  ldap2pg.full.yml  ldap2pg.master.yml  ldap2pg.yml  ldaprc  main.go  mkdocs.yml  nfpm.yaml  pg_dumpacl.c  pg_dumpacl.spec  (+5 more)
.circleci/: config.yml
.config/: .readthedocs.yaml
docker/: .dockerignore  Dockerfile  Makefile  README.md  dev-config.ldif  docker-entrypoint.sh  entrypoint.sh  openldap-entrypoint.sh
docs/: acl.md  api.md  auto-acl-doc.py  auto-privileges-doc.py  builtins.md  builtins.md.tmpl  changelog.md  cli.md  config.md  cookbook.md  hacking.md  index.md  install.md  ldap.md  ldap2pg.css  ldap2pg.minimal.yml  postgres.md  privileges.md  requirements.txt  roles.md  wellknown.md  wellknown.md.j2
fixtures/: openldap-config.ldif  openldap-data.ldif  postgres.sh
internal/: VERSION  blacklist.go  config.go  config_test.go  config_yaml.go  config_yaml_test.go  ldap.go  logging.go  logging_test.go  main_test.go  normalizers.go  normalizers_test.go  postgres.go  postgres_pool.go  queries.go  roles.go  roleset.go  version.go  wanted.go
ldap2pg/: __init__.py  acl.py  config.py  defaults.py  format.py  inspector.py  ldap.py  manager.py  privilege.py  psql.py  role.py  script.py  utils.py  validators.py
(+346 files in other folders)
