[metadata]
name = ldap2pg
version = attr: ldap2pg.__version__
summary = Synchronize PostgreSQL roles from LDAP
url = https://github.com/dalibo/ldap2pg
author = Dalibo
author_email = contact@dalibo.com
long_description = file: README.rst
license = PostgreSQL
classifiers =
    License :: OSI Approved
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[options]
packages = ldap2pg

[options.entry_points]
console_scripts =
    ldap2pg=ldap2pg.script:main

[bdist_rpm]
python = /usr/bin/python2
requires = python-psycopg2 python-ldap PyYAML

[bdist_wheel]
universal=1

[flake8]
exclude = .*, _*
show_source = True
