[metadata]
long_description = file: README.rst
classifiers =
    License :: OSI Approved
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[bdist_rpm]
python = /usr/bin/python2
requires = python-psycopg2 python-ldap PyYAML

[bdist_wheel]
universal=1

[flake8]
exclude = .*, _*
show_source = True
